# tplg

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
.template/: index.ts.tpl  {{name}}.styl.tpl  {{name}}.vue.tpl
src/: args.rs  generate.rs  main.rs  utils.rs
