[package]
name = "tplg"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
heck = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"

